<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.main.MainActivity">
    <RelativeLayout
        android:id="@+id/rl_active_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/search_bg">
    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_marginEnd="2dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/text_post_header" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/iv_search"
        android:hint="@string/search"
        android:isScrollContainer="true"
        android:maxLines="1"
        android:background="@null"
        android:padding="5dp"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        android:autofillHints="" />
    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp"
        android:background="@color/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_active_search"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeRefreshLayout">
        <LinearLayout
            android:id="@+id/networkStatusLayout"
            style="@style/StatusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorStatusNotConnected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/textViewNetworkStatus"
                style="@style/StatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/text_no_connectivity" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userRecyclerView"
            style="@style/PostsRecyclerStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_right_to_left"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/networkStatusLayout"
            tools:listitem="@layout/item_post" />

        <ProgressBar
            android:id="@+id/load_state_progress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postsRecyclerView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>